[package]
name = "astro"
version.workspace = true
description = "Astro static site generator compiler in Rust"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-to-cmark.workspace = true
clap.workspace = true
nargo-template.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.10.0"

[[bin]]
name = "astro"
path = "bin/astro.rs"
