[package]
name = "astro"
version.workspace = true
description = "Astro static site generator compiler in Rust"
homepage.workspace = true
repository = "https://github.com/doki-land/rusty-ssg/tree/dev/compilers/astro"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords = ["static-site-generator", "astro", "rust", "compiler"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
nargo-template.workspace = true
oak-core.workspace = true
oak-markdown.workspace = true
walkdir.workspace = true
chrono.workspace = true
rayon = "1.10.0"
hashbrown = "0.14.3"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.10.0"

[features]
default = []

[[bin]]
name = "astro"
path = "bin/astro.rs"
