[package]
publish = false
name = "eleventy"
version.workspace = true
description = "Eleventy static site generator compiler in Rust"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap = { version = "4.5.0", features = ["derive"] }
toml = "0.8.10"
yaml-rust = "0.4.1"
notify = "6.1.1"
axum = "0.7.5"
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
websocket = "0.27.0"
liquid = "0.26"
handlebars = "6.4.0"
pulldown-cmark = "0.9.3"

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "eleventy"
path = "bin/eleventy.rs"
