[package]
publish = false
name = "eleventy"
version.workspace = true
description = "Eleventy static site generator compiler in Rust"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
toml.workspace = true
yaml-rust.workspace = true
notify.workspace = true
axum.workspace = true
tower-http.workspace = true
websocket.workspace = true
liquid.workspace = true
handlebars.workspace = true
pulldown-cmark.workspace = true
nargo-template.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "eleventy"
path = "bin/eleventy.rs"
