[package]
name = "gatsby"
version.workspace = true
description = "Gatsby static site generator compiler in Rust"
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
oak-core.workspace = true
oak-json.workspace = true
oak-yaml.workspace = true
oak-toml.workspace = true
oak-markdown.workspace = true
clap.workspace = true
console.workspace = true
chrono.workspace = true
walkdir.workspace = true
regex.workspace = true
nargo-types.workspace = true
nargo-parser.workspace = true
nargo-document.workspace = true
nargo-template.workspace = true
async-graphql = "7.0"
async-graphql-value = "7.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
indexmap = "2.0"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.26.0"
ntest = "0.9.5"

[features]
default = ["dev"]
dev = []

[[bin]]
name = "gatsby"
path = "bin/gatsby.rs"

[[example]]
name = "run_validation"
path = "examples/run_validation.rs"
