[package]
name = "gatsby"
version.workspace = true
description = "Gatsby static site generator compiler in Rust"
homepage.workspace = true
repository = "https://github.com/doki-land/rusty-ssg/tree/dev/compilers/gatsby"
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords = ["static-site-generator", "gatsby", "rust", "compiler"]
categories = ["web-programming", "command-line-utilities"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
oak-core.workspace = true
oak-json.workspace = true
oak-yaml.workspace = true
oak-toml.workspace = true
oak-markdown.workspace = true
clap.workspace = true
console.workspace = true
chrono.workspace = true
walkdir.workspace = true
regex.workspace = true
nargo-types.workspace = true
nargo-parser.workspace = true
nargo-document.workspace = true
nargo-template.workspace = true
indexmap.workspace = true
async-graphql-value.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.26.0"
ntest = "0.9.5"

[features]
default = ["dev"]
dev = []

[[bin]]
name = "gatsby"
path = "bin/gatsby.rs"

[[example]]
name = "run_validation"
path = "examples/run_validation.rs"
