[package]
name = "hexo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/doki-land/rusty-ssg/tree/dev/compilers/hexo"
homepage.workspace = true
description = "Pure Rust implementation of Hexo static site generator compiler"
keywords = ["hexo", "cli", "compiler", "markdown", "blog"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

console = { workspace = true }
indicatif = { workspace = true }
slug = { workspace = true }
fs_extra = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
wae-https = { workspace = true }
oak-core = { workspace = true }
oak-vfs = { workspace = true }
oak-yaml = { workspace = true, features = ["serde"] }
oak-toml = { workspace = true, features = ["serde"] }
http = { workspace = true }

nargo-document = { workspace = true }
nargo-template = { workspace = true }
nargo-types = { workspace = true }
serde_yaml = { version = "0.9.34" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.26.0"

[features]
default = []
dev = []

[[bin]]
name = "hexo"
path = "bin/hexo.rs"
