[package]
name = "hugo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/doki-land/rusty-ssg/tree/dev/compilers/hugo"
homepage.workspace = true
description = "Hugo 兼容的文档系统"
keywords = ["hugo", "cli", "compiler", "markdown", "documentation"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
oak-core = { workspace = true }
oak-toml = { workspace = true, features = ["serde"] }
oak-yaml = { workspace = true, features = ["serde"] }
oak-json = { workspace = true, features = ["serde"] }
oak-markdown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = { workspace = true }
http = { workspace = true }
nargo-template = { workspace = true }


regex = { workspace = true }
lazy_static = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
chrono = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
slug = { workspace = true }
fs_extra = { workspace = true }
notify = { workspace = true, optional = true }

wae-https = { workspace = true }
nargo-types = { workspace = true }
nargo-parser = { workspace = true }
nargo-document = { workspace = true }

[dev-dependencies]
ntest = "0.9.5"
criterion = "0.8.2"
tempfile = "3.26.0"

[[bench]]
name = "compiler_bench"
harness = false

[features]
default = ["dev"]
dev = ["notify"]

[[bin]]
name = "hugo"
path = "bin/hugo.rs"
